style(config) Fix nav height and r align links

--- a/project.css
+++ b/project.css
@@ -10,7 +10,7 @@ body{
 .photos {
 
   /*min-width: 1920 px;
-  min-height: 100%;*/
+  min-height: 100%;
 
   width: 100%;
   height: auto;
@@ -18,18 +18,26 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-
-  /*margin: 5em, 5em, 5em, 5em;*/
-  /*padding: 20em, 20em, 20em, 20em;*/
+  position: relative;
+  margin: 5em, 5em, 5em, 5em;
+  padding: 20em, 20em, 20em, 20em;*/
+  float: left;
+  width:  280px;
+  height: 280px;
+  background-position: 50% 50%;
+  background-repeat:   no-repeat;
+  background-size:     cover;
+  margin-bottom: 1em;
 }
 
 .photos.medium {
-  margin-left: auto;
+  /*margin-left: auto;
   margin-right: auto;
   width: 100%;
   max-width: 1280px;
   height: auto;
-  position: relative;
+  position: relative;*/
+
 
 }
 
@@ -123,6 +131,12 @@ p {
   display:block;
   width: 90%;
 
+}
+
+.center-whole {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
